trend charts alignment fixes

--- a/webroot/sites/all/themes/dotgov/css/dotgov.css
+++ b/webroot/sites/all/themes/dotgov/css/dotgov.css
@@ -638,6 +638,16 @@ section#block-favorites-0 {
 	right: 10px;
 	background: #fff;
 }*/
+
+.pane-trend-analysis-trends-dap h2.pane-title,
+.pane-trend-analysis-trends-dnssec h2.pane-title,
+.pane-trend-analysis-trends-ipv6 h2.pane-title,
+.pane-trend-analysis-trends-freerc4 h2.pane-title,
+.pane-trend-analysis-trends-m1513 h2.pane-title,
+.pane-trend-analysis-trends-accessible-chart h2.pane-title{
+	min-height: 70px;
+}
+
 #block-favorites-0 h2.block-title {
 	font-weight: bold;
 	padding: 10px 5px;
